--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,12 +1,32 @@
 <div class="md-padding" flex layout-sm="column">
-    <md-card>
-        <md-card-content>
-            <h2 class="md-title text-center">Login to BuiltRight</h2>
-
-            <form ng-submit="Login.loginUser(user)">
-              <input class="form-control" type="text" ng-model="user.username" placeholder="Email">
-              <input class="form-control" type="password" ng-model="user.password" placeholder="Password">
-            </form>
-        </md-card-content>
-    </md-card>
+  <md-card>
+    <md-card-content>
+      <h2 class="md-title text-center">Login to BuiltRight</h2>
+      <form name="userForm">
+        <md-input-container>
+          <label>Last Name</label>
+          <input name="lastName" ng-model="lastName" required md-maxlength="10" minlength="4">
+          <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="md-maxlength">That's too long!</div>
+            <div ng-message="minlength">That's too short!</div>
+          </div>
+        </md-input-container>
+        <md-input-container>
+          <label>Biography</label>
+          <textarea name="bio" ng-model="biography" required md-maxlength="150"></textarea>
+          <div ng-messages="userForm.bio.$error" ng-show="userForm.bio.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="md-maxlength">That's too long!</div>
+          </div>
+        </md-input-container>
+        <md-input-container>
+          <input aria-label="title" ng-model="title">
+        </md-input-container>
+        <md-input-container>
+          <input placeholder="title" ng-model="title">
+        </md-input-container>
+      </form>
+    </md-card-content>
+  </md-card>
 </div>
