--- a/public/index.html
+++ b/public/index.html
@@ -150,9 +150,41 @@
 
 
 <!-- injector:js -->
-<script src="/app/assets/js/builtright-angularbundle.js"></script>
-<script src="/app/assets/js/builtright-appbundle.js"></script>
-<script src="/app/assets/js/templates.js"></script>
+<script src="/src/bower_components/jquery/dist/jquery.js"></script>
+<script src="/src/bower_components/es5-shim/es5-shim.js"></script>
+<script src="/src/bower_components/json3/lib/json3.min.js"></script>
+<script src="/src/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/src/bower_components/angular/angular.js"></script>
+<script src="/src/bower_components/angular-resource/angular-resource.js"></script>
+<script src="/src/bower_components/angular-aria/angular-aria.js"></script>
+<script src="/src/bower_components/angular-mocks/angular-mocks.js"></script>
+<script src="/src/bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="/src/bower_components/angular-animate/angular-animate.js"></script>
+<script src="/src/bower_components/angular-touch/angular-touch.js"></script>
+<script src="/src/bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="/src/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="/src/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="/src/bower_components/angular-messages/angular-messages.js"></script>
+<script src="/src/bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+<script src="/src/bower_components/angular-material/angular-material.js"></script>
+<script src="/app/app.js"></script>
+<script src="/app/app.config.js"></script>
+<script src="/app/modules/builds/buildsModule.js"></script>
+<script src="/app/modules/home/homeModule.js"></script>
+<script src="/app/modules/login/loginModule.js"></script>
+<script src="/app/modules/builds/buildsRoute.js"></script>
+<script src="/app/modules/home/homeRoute.js"></script>
+<script src="/app/modules/login/loginRoute.js"></script>
+<script src="/app/modules/builds/buildsCtrl.js"></script>
+<script src="/app/modules/home/homeCtrl.js"></script>
+<script src="/app/modules/layouts/main-page/mainPageCtrl.js"></script>
+<script src="/app/modules/layouts/side-nav/sidenavCtrl.js"></script>
+<script src="/app/modules/login/loginCtrl.js"></script>
+<script src="/app/modules/builds/buildsService.js"></script>
+<script src="/app/modules/home/homeService.js"></script>
+<script src="/app/modules/layouts/nav-bar/navBarService.js"></script>
+<script src="/app/modules/layouts/side-nav/sidenavService.js"></script>
+<script src="/app/modules/login/loginService.js"></script>
 <!-- endinjector -->
 
 
