layout form is correct now

--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,11 +1,24 @@
+<style>
+.login-form {
+  position: relative; 
+  left: 30%;
+  width: 40%;
+}
+
+@media(max-width: 550px) {
+  .login-form {
+    width: 100%;
+  }
+}
+</style>
 <div class="md-padding" flex layout-sm="column">
   <md-card>
     <md-card-content>
       <h2 class="md-title text-center">Login to BuiltRight</h2>
       <form name="userForm">
         <div layout="column">
-          <md-input-container flex>
-            <label>Last Name</label>
+          <md-input-container flex class="login-form">
+            <label>Email</label>
             <input name="lastName" ng-model="lastName" required md-maxlength="10" minlength="4">
             <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
               <div ng-message="required">This is required!</div>
@@ -13,8 +26,8 @@
               <div ng-message="minlength">That's too short!</div>
             </div>
           </md-input-container>
-          <md-input-container flex>
-            <label>Biography</label>
+          <md-input-container flex class="login-form">
+            <label>Password</label>
             <textarea name="bio" ng-model="biography" required md-maxlength="150"></textarea>
             <div ng-messages="userForm.bio.$error" ng-show="userForm.bio.$dirty">
               <div ng-message="required">This is required!</div>
