--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,18 +1,3 @@
-<style>
-.login-form {
-  /*position: relative; */
-  left: 30%;
-  width: 40%;
-}
-
-@media(max-width: 550px) {
-  .login-form {
-    width: 90%;
-    left: 5%; 
-    top: 0; 
-  }
-}
-</style>
 <div class="md-padding" flex layout-sm="column">
   <md-card>
     <md-card-content>
@@ -21,23 +6,26 @@
         <div layout="column">
           <md-input-container flex class="login-form">
             <label>Email</label>
-            <input name="lastName" ng-model="lastName" required md-maxlength="150" minlength="4">
-            <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
-              <div ng-message="required">This is required!</div>
-              <div ng-message="md-maxlength">That's too long!</div>
-              <div ng-message="minlength">That's too short!</div>
+            <input name="username" ng-model="user.username" required md-maxlength="150" minlength="4">
+            <div ng-messages="userForm.username.$error" ng-show="userForm.username.$dirty">
+              <!-- <div ng-message="required">This is required!</div> -->
+              <!-- <div ng-message="md-maxlength">That's too long!</div> -->
+              <!-- <div ng-message="minlength">That's too short!</div> -->
             </div>
           </md-input-container>
           <md-input-container flex class="login-form">
             <label>Password</label>
-            <textarea name="bio" ng-model="biography" required md-minlength="8"></textarea>
-            <div ng-messages="userForm.bio.$error" ng-show="userForm.bio.$dirty">
-              <div ng-message="required">This is required!</div>
-              <div ng-message="md-maxlength">That's too long!</div>
+            <input name="password" type="password" ng-model="user.password" required minlength="4">
+            <div ng-messages="userForm.password.$error" ng-show="userForm.password.$dirty">
+              <!-- <div ng-message="required">This is required!</div> -->
+              <!-- <div ng-message="minlength">That's too short!</div> -->
             </div>
           </md-input-container>
         </div>
       </form>
+      <div class="text-center">
+        <md-button class="md-raised" ng-click="vm.loginUser(user)" aria-label="description" md-ripple-size="full">Login</md-button>
+      </div>
     </md-card-content>
   </md-card>
 </div>
