--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -10,7 +10,7 @@
         <label>Password</label>
         <input ng-model="user.password" type="password" minlength="6">
       </md-input-container>
-      <md-button class="md-raised" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full">Login</md-button>
+      <md-button class="md-raised" aria-label="description" md-ripple-size="full">Login</md-button>
     </div>
   </md-content>
   <!-- <md-content layout-padding>
