--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt" ng-app="builtright">
 <head>
-    <base href="/">
+    <!-- <base href="/"> -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<base href="/">
@@ -189,7 +189,6 @@
 <script src="/app/modules/home/homeService.js"></script>
 <script src="/app/modules/layouts/nav-bar/navBarService.js"></script>
 <script src="/app/modules/layouts/side-nav/sidenavService.js"></script>
-<script src="/app/modules/login/authService.js"></script>
 <script src="/app/modules/login/loginService.js"></script>
 <!-- endinjector -->
 
