working on auth and backend

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<!-- injector:css -->
 	<link rel="stylesheet" href="/src/bower_components/angular-material-icons/angular-material-icons.css">
 	<link rel="stylesheet" href="/src/bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/app/assets/css/style.css">
 	<!-- endinjector -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
