add custom css styling, added in auth and login factories

--- a/public/app/modules/builds/builds.html
+++ b/public/app/modules/builds/builds.html
@@ -18,7 +18,7 @@
       <h2 class="md-title">Builds</h2>
     </md-card-content>
   </md-card>
-  <md-button ng-click="vm.addBuild = !vm.addBuild" class="md-fab" md-ripple-size="full" style="position: absolute; right: 35px; top: 35px; ">
+  <md-button ng-click="vm.addBuild = !vm.addBuild" aria-label="add build" class="md-fab md-success" md-ripple-size="full" style="position: absolute; right: 35px; top: 35px; ">
     <i class="fa fa-plus"></i>
   </md-button>
 </div>
