--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt" ng-app="builtright">
 <head>
-    <base href="/">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<base href="/">
 	<title>BuiltRight - An App for the Auto Enthusiast</title>
 	<meta name="description" content="Modular AngularJS with Angm-generator" />
 	<meta name="author" content="" />
@@ -14,6 +12,7 @@
 	<link rel="apple-touch-icon" href="app/assets/images/apple-touch-icon.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="app/assets/images/apple-touch-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="app/assets/images/apple-touch-icon-114x114.png" />
+    <link rel="stylesheet" href="/app/assets/css/style.css">
 	<!-- injector:css -->
 	<link rel="stylesheet" href="/src/bower_components/angular-material-icons/angular-material-icons.css">
 	<link rel="stylesheet" href="/src/bower_components/angular-material/angular-material.css">
@@ -189,7 +188,6 @@
 <script src="/app/modules/home/homeService.js"></script>
 <script src="/app/modules/layouts/nav-bar/navBarService.js"></script>
 <script src="/app/modules/layouts/side-nav/sidenavService.js"></script>
-<script src="/app/modules/login/authService.js"></script>
 <script src="/app/modules/login/loginService.js"></script>
 <!-- endinjector -->
 
