--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -4,7 +4,7 @@
     <h1 class="text-center">Login</h1>
       <md-input-container flex>
         <label>Email</label>
-        <input ng-model="user.email" type="email">
+        <input ng-model="user.username" type="email">
       </md-input-container>
       <md-input-container flex>
         <label>Password</label>
