added create_build route, built out the BuildsService more, refined auth

--- a/public/app/modules/home/dashboard.html
+++ b/public/app/modules/home/dashboard.html
@@ -4,6 +4,18 @@
         
             <!-- List of Users Builds --> 
             <h2>Dashboard</h2>
+
+            <md-card>
+              <md-card-content>
+                <h2>You don't have any builds</h2>
+                <p>Try creating one.</p>
+              </md-card-content>
+              <div class="md-actions" layout="row" layout-align="center end">
+                 <md-button ui-sref="home.create_build">Create Your First Build</md-button>
+               </div>
+            </md-card>
+
+           <!-- <code> {{ vm.builds }} </code> -->
             
         </md-card-content>
     </md-card>
