setup better handling of the nav bar and stuff

--- a/public/app/modules/builds/builds.html
+++ b/public/app/modules/builds/builds.html
@@ -15,7 +15,7 @@
     <md-card-content>
       <h2 class="md-title">Builds</h2>
     </md-card-content>
-    <md-button ng-click="vm.addBuild = !vm.addBuild" aria-label="add build" class="md-fab md-primary" md-ripple-size="full" style="position: absolute; right: 35px; bottom: 35px; ">
+    <md-button ui-sref="home.create_build" aria-label="add build" class="md-fab md-primary" md-ripple-size="full" style="position: absolute; right: 35px; bottom: 35px; ">
       <i class="fa fa-plus"></i>
     </md-button>
   </md-card>
