updates to auth

--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -14,5 +14,8 @@
         <md-button class="md-raised" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full">Login</md-button>
       </form>
     </div>
+    <div class="md-actions" layout="row" layout-align="center end">
+      <md-button ui-sref="home.register">Not a user? Sign up here.</md-button>
+    </div>
   </md-content>
 </div>
