--- a/public/app/modules/login/register.html
+++ b/public/app/modules/login/register.html
@@ -10,6 +10,11 @@
         <label>Password</label>
         <input ng-model="user.password" type="password" minlength="6">
       </md-input-container>
-      <md-button class="md-raised" aria-label="description" ng-click="vm.createUser(user)" md-ripple-size="full">Login</md-button>
+      <md-button class="md-raised" aria-label="description" ng-click="vm.createUser(user)" md-ripple-size="full">Sign up </md-button>
     </div>
+    <div class="md-actions" layout="row" layout-align="center end">
+      <md-button ui-sref="home.login">Already a user? Login.</md-button>
+    </div>
+
   </md-content>
+</div>
