--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,21 +1,17 @@
-<div layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding layout-align="center center">
-    <div layout="column" flex-xs="100" flex-gt-xs="50">
-      <h1 class="text-center">Login</h1>
-      <form ng-submit="vm.loginUser(user);" layout="column" flex="100">
-        <md-input-container flex>
-          <label>Email</label>
-          <input ng-model="user.username" type="email">
-        </md-input-container>
-        <md-input-container flex>
-          <label>Password</label>
-          <input ng-model="user.password" type="password" minlength="6">
-        </md-input-container>
-        <md-button class="md-raised" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full">Login</md-button>
-      </form>
-    </div>
-    <div class="md-actions" layout="row" layout-align="center end">
-      <md-button ui-sref="home.register">Not a user? Sign up here.</md-button>
-    </div>
-  </md-content>
-</div>
+<md-content flex-gt-xs="50" flex-offset-gt-sm="25" layout-padding md-whiteframe="3" style="padding: 25px 25px; margin-top: 25px;">
+  <h1 class="text-center">Login</h1>
+  <form ng-submit="vm.loginUser(user);" layout="column" flex="100">
+    <md-input-container flex>
+      <label>Email</label>
+      <input ng-model="user.username" type="email">
+    </md-input-container>
+    <md-input-container flex>
+      <label>Password</label>
+      <input ng-model="user.password" type="password" minlength="6">
+    </md-input-container>
+    <md-button class="md-raised" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full">Login</md-button>
+  </form>
+  <div class="md-actions" layout="column" layout-align="center center">
+    <md-button ui-sref="home.register">Not a user? Sign up here.</md-button>
+  </div>
+</md-content>
