--- a/public/app/modules/login/register.html
+++ b/public/app/modules/login/register.html
@@ -1,20 +1,15 @@
-<div layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-    <div layout="column" class="loginForm">
-      <h1 class="text-center">Sign up for BuiltRight</h1>
-      <md-input-container>
-        <label>Email</label>
-        <input ng-model="user.email" type="email">
-      </md-input-container>
-      <md-input-container>
-        <label>Password</label>
-        <input ng-model="user.password" type="password" minlength="6">
-      </md-input-container>
-      <md-button class="md-raised" aria-label="description" ng-click="vm.createUser(user)" md-ripple-size="full">Sign up </md-button>
-    </div>
-    <div class="md-actions" layout="row" layout-align="center end">
+<md-content md-whiteframe="3" flex="50" flex-offset="25" flex-xs="100" flex-offset-xs="0" layout-gt-sm="column" layout-padding style="padding: 25px 25px; margin-top: 25px;">
+    <h1 class="text-center">Sign up for BuiltRight</h1>
+    <md-input-container>
+      <label>Email</label>
+      <input ng-model="user.email" type="email">
+    </md-input-container>
+    <md-input-container>
+      <label>Password</label>
+      <input ng-model="user.password" type="password" minlength="6">
+    </md-input-container>
+    <md-button class="md-raised" aria-label="description" ng-click="vm.createUser(user)" md-ripple-size="full">Sign up </md-button>
+    <div class="md-actions" layout="column" layout-align="center center">
       <md-button ui-sref="home.login">Already a user? Login.</md-button>
     </div>
-
-  </md-content>
-</div>
+</md-content>
