--- a/public/app/modules/home/dashboard.html
+++ b/public/app/modules/home/dashboard.html
@@ -1,22 +1,22 @@
 <div class="md-padding" flex layout-sm="column">
-    <md-card class="text-center">
+  <md-card class="text-center">
+    <md-card-content>
+      <!-- List of Users Builds -->
+      <h2>Dashboard</h2>
+      <md-card>
         <md-card-content>
-        
-            <!-- List of Users Builds --> 
-            <h2>Dashboard</h2>
-
-            <md-card>
-              <md-card-content>
-                <h2>You don't have any builds</h2>
-                <p>Try creating one.</p>
-              </md-card-content>
-              <div class="md-actions" layout="row" layout-align="center end">
-                 <md-button ui-sref="home.create_build">Create Your First Build</md-button>
-               </div>
-            </md-card>
-
-           <!-- <code> {{ vm.builds }} </code> -->
-            
+          <h2 ng-if="!vm.builds">You don't have any builds</h2>
+          <p>Try creating one.</p>
         </md-card-content>
-    </md-card>
+        <div class="md-actions" layout="row" layout-align="center end">
+          <md-button ui-sref="home.create_build">Create Your First Build</md-button>
+        </div>
+      </md-card>
+      <md-card ng-repeat="build in vm.builds">
+        <md-card-content>
+          <h2>{{build.name}}</h2>
+        </md-card-content>
+      </md-card>
+    </md-card-content>
+  </md-card>
 </div>
