--- a/public/app/modules/home/home.html
+++ b/public/app/modules/home/home.html
@@ -10,7 +10,7 @@
       </div>
     </md-toolbar>
     <md-list>
-      <md-list-item>
+      <md-list-item ng-if="vm.user">
         <div class="inset"> 
           <ng-md-icon icon="person"></ng-md-icon> 
         </div>
