--- a/public/index.html
+++ b/public/index.html
@@ -188,6 +188,7 @@
 <script src="/app/modules/home/homeService.js"></script>
 <script src="/app/modules/layouts/nav-bar/navBarService.js"></script>
 <script src="/app/modules/layouts/side-nav/sidenavService.js"></script>
+<script src="/app/modules/login/LoginEventService.js"></script>
 <script src="/app/modules/login/loginService.js"></script>
 <!-- endinjector -->
 
