--- a/public/index.html
+++ b/public/index.html
@@ -179,6 +179,7 @@
 <script src="/app/modules/builds/buildsRoute.js"></script>
 <script src="/app/modules/home/homeRoute.js"></script>
 <script src="/app/modules/login/loginRoute.js"></script>
+<script src="/app/modules/builds/BuildDetailCtrl.js"></script>
 <script src="/app/modules/builds/buildsCtrl.js"></script>
 <script src="/app/modules/home/homeCtrl.js"></script>
 <script src="/app/modules/layouts/main-page/mainPageCtrl.js"></script>
