--- a/public/app/modules/home/dashboard.html
+++ b/public/app/modules/home/dashboard.html
@@ -3,14 +3,11 @@
     <h2>Dashboard</h2>
   </md-card-content>
   <div layout="row" layout-xs="column">
-    <md-card flex flex-gt-xs="30" class="md-padding">
+    <md-card ui-sref="home.builds" flex flex-gt-xs="30" class="md-padding">
       <h2>View Your Builds</h2>
     </md-card>
-    <md-card flex flex-gt-xs="30" class="md-padding">
+    <md-card ui-sref="home.create_build" flex flex-gt-xs="30" class="md-padding">
       <h2>Add A Build</h2>
-    </md-card>
-    <md-card flex flex-gt-xs="30" class="md-padding">
-      <h2>Share Your Build</h2>
     </md-card>
   </div>
 </md-content>
