working on auth

--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,6 +1,6 @@
 <md-content flex-gt-xs="50" flex-offset-gt-sm="25" layout-padding md-whiteframe="3" style="padding: 25px 25px; margin-top: 25px;">
   <h1 class="text-center">Login</h1>
-  <form ng-submit="vm.loginUser(user);" layout="column" flex="100">
+  <form layout="column" flex="100">
     <md-input-container flex>
       <label>Email</label>
       <input ng-model="user.username" type="email">
