--- a/public/app/modules/login/register.html
+++ b/public/app/modules/login/register.html
@@ -1,4 +1,5 @@
-<md-content md-whiteframe="3" flex="50" flex-offset="25" flex-xs="100" flex-offset-xs="0" layout-gt-sm="column" layout-padding style="padding: 25px 25px; margin-top: 25px;">
+<form ng-submit="vm.createUser(user)">
+  <md-content md-whiteframe="3" flex="50" flex-offset="25" flex-xs="100" flex-offset-xs="0" layout-gt-sm="column" layout-padding style="padding: 25px 25px; margin-top: 25px;">
     <h1 class="text-center">Sign up for BuiltRight</h1>
     <md-input-container>
       <label>Email</label>
@@ -12,4 +13,5 @@
     <div class="md-actions" layout="column" layout-align="center center">
       <md-button ui-sref="home.login">Already a user? Login.</md-button>
     </div>
-</md-content>
+  </md-content>
+</form>
