--- a/public/app/modules/login/register.html
+++ b/public/app/modules/login/register.html
@@ -1,6 +1,7 @@
 <form ng-submit="vm.createUser(user)">
   <md-content md-whiteframe="3" flex="50" flex-offset="25" flex-xs="100" flex-offset-xs="0" layout-gt-sm="column" layout-padding style="padding: 25px 25px; margin-top: 25px;">
     <h1 class="text-center">Sign up for BuiltRight</h1>
+    <h4>The best way to track your builds and plan new project cars.</h4>
     <md-input-container>
       <label>Email</label>
       <input ng-model="user.email" type="email">
