--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -3,7 +3,7 @@
   <form layout="column" flex="100">
     <md-input-container flex>
       <label>Email</label>
-      <input ng-model="user.username" type="email">
+      <input ng-model="user.email" type="email">
     </md-input-container>
     <md-input-container flex>
       <label>Password</label>
