--- a/public/app/modules/home/dashboard.html
+++ b/public/app/modules/home/dashboard.html
@@ -3,10 +3,10 @@
     <h2>Dashboard</h2>
   </md-card-content>
   <div layout="row" layout-xs="column">
-    <md-card ui-sref="home.builds" flex flex-gt-xs="30" class="md-padding">
+    <md-card md-colors="::{background: 'cyan'}" ui-sref="home.builds" flex flex-gt-xs="30" class="md-padding">
       <h2>View Your Builds</h2>
     </md-card>
-    <md-card ui-sref="home.create_build" flex flex-gt-xs="30" class="md-padding">
+    <md-card md-colors="::{background: 'teal'}" ui-sref="home.create_build" flex flex-gt-xs="30" class="md-padding">
       <h2>Add A Build</h2>
     </md-card>
   </div>
