--- a/public/app/modules/login/login.html
+++ b/public/app/modules/login/login.html
@@ -1,17 +1,17 @@
 <md-content flex-gt-xs="50" flex-offset-gt-sm="25" layout-padding md-whiteframe="3" style="padding: 25px 25px; margin-top: 25px;">
-  <h1 class="text-center">Login</h1>
-  <form layout="column" flex="100">
-    <md-input-container flex>
-      <label>Email</label>
-      <input ng-model="user.email" type="email">
-    </md-input-container>
-    <md-input-container flex>
-      <label>Password</label>
-      <input ng-model="user.password" type="password" minlength="6">
-    </md-input-container>
-    <md-button class="md-raised" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full">Login</md-button>
-  </form>
-  <div class="md-actions" layout="column" layout-align="center center">
-    <md-button ui-sref="home.register">Not a user? Sign up here.</md-button>
-  </div>
+	<h1 class="text-center">Login</h1>
+	<form layout="column" flex="100" ng-submit="vm.loginUser(user)">
+		<md-input-container flex>
+			<label>Email</label>
+			<input ng-model="user.email" type="email">
+		</md-input-container>
+		<md-input-container flex>
+			<label>Password</label>
+			<input ng-model="user.password" type="password" minlength="6">
+		</md-input-container>
+		<md-button class="md-raised" md-colors="{background: 'teal'}" aria-label="description" ng-click="vm.loginUser(user)" md-ripple-size="full" ng-keypress="vm.loginUser(user)">Login</md-button>
+	</form>
+	<div class="md-actions" layout="column" layout-align="center center">
+		<md-button ui-sref="home.register">Not a user? Sign up here.</md-button>
+	</div>
 </md-content>
