--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,14 @@
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+    <script>
+    var socket = io('localhost:3000');
+    var visitorData = {
+        referringSite: document.referrer,
+        page: location.pathname
+    }
+    socket.emit('visitor-data', visitorData);
+    </script>
   </body>
 </html>
