--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    <script type="text/javascript" src="http://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
   </body>
 </html>
